--- a/templates/partials/pc-stats-tabs.hbs
+++ b/templates/partials/pc-stats-tabs.hbs
@@ -158,7 +158,7 @@
      </div>
      <div class="tab notes-tab" data-group="primary" data-tab="notes-tab">
        <h2>{{localize "l5r45.sheet.notes"}}</h2>
-      {{editor system.notes target="system.notes" button=true owner=owner editable=true}}
+      {{editor system.notes target="system.notes" button=true  editable=true}}
      </div>
     </section>
  
