--- a/templates/partials/pc-stats.hbs
+++ b/templates/partials/pc-stats.hbs
@@ -137,6 +137,6 @@
   {{> "systems/l5r45/templates/partials/pc-advantages.hbs"}}
   <h2>{{localize "l5r45.sheet.notes"}}</h2>
   
-    {{editor system.notes target="system.notes" button=true owner=owner editable=true}}
+    {{editor system.notes target="system.notes" button=true  editable=true}}
   
 </section>
