--- a/templates/sheets/kiho-sheet.hbs
+++ b/templates/sheets/kiho-sheet.hbs
@@ -37,8 +37,8 @@
       </tr>
     </table>
     <h2>{{localize "l5r45.sheet.rulesSummary"}}</h2>
-    {{editor item.system.specialRules target="system.specialRules" button=true owner=owner editable=editable}}
+    {{editor item.system.specialRules target="system.specialRules" button=true  editable=editable}}
     <h2>{{localize "l5r45.sheet.description"}}</h2>
-    {{editor item.system.description target="system.description" button=true owner=owner editable=editable}}
+    {{editor item.system.description target="system.description" button=true  editable=editable}}
   </div>
 </form>
