--- a/templates/sheets/skill-sheet.hbs
+++ b/templates/sheets/skill-sheet.hbs
@@ -77,6 +77,6 @@
       </tr>
     </table>
     <h2>{{localize "l5r45.sheet.rulesSummary"}}</h2>
-    {{editor item.system.specialRules target="system.specialRules" button=true owner=owner editable=editable}}
+    {{editor item.system.specialRules target="system.specialRules" button=true  editable=editable}}
   </div>
 </form>
