--- a/templates/sheets/armor-sheet.hbs
+++ b/templates/sheets/armor-sheet.hbs
@@ -23,6 +23,6 @@
     <input name="system.reduction" type="number" value="{{item.system.reduction}}" data-type="Number" />
     </td>
   </table>
-  {{editor item.system.description target="system.description" button=true owner=owner editable=editable}}
+  {{editor item.system.description target="system.description" button=true  editable=editable}}
   </div>
 </form>
