--- a/templates/sheets/npc-sheet.hbs
+++ b/templates/sheets/npc-sheet.hbs
@@ -17,7 +17,7 @@
       </div>
       <div class="npc-notes">
         <h2>{{localize "l5r45.sheet.notes"}}</h2>
-        {{editor system.notes target="system.notes" button=true owner=owner editable=true}}
+        {{editor system.notes target="system.notes" button=true  editable=true}}
       </div>
     </div>
     <div class="npc-wounds">
