--- a/templates/sheets/weapon-sheet.hbs
+++ b/templates/sheets/weapon-sheet.hbs
@@ -24,6 +24,6 @@
     <input name="system.explodesOn" type="number" value="{{item.system.explodesOn}}" data-type="Number" />
     </td>
   </table>
-    {{editor item.system.description target="system.description" button=true owner=owner editable=editable}}
+    {{editor item.system.description target="system.description" button=true  editable=editable}}
   </div>
 </form>
