Ahora sí funciona lmao

--- a/less/l5r45.less
+++ b/less/l5r45.less
@@ -10,8 +10,10 @@
 @import "./pc-skills.less";
 @import "./pc-spell-slots.less";
 @import "./pc-spell-mastery.less";
-@import "./pc-spells-techniques.less";
+@import "./pc-techniques.less";
+@import "./pc-spells.less";
 @import "./pc-armor-tn.less";
+@import "./pc-glories.less";
 @import "./npc-sheet.less";
 @import "./npc-wounds.less";
 @import "./npc-skills.less";
