--- a/templates/partials/pc-spells.hbs
+++ b/templates/partials/pc-spells.hbs
@@ -2,7 +2,7 @@
   <h2>
     <div>{{localize "l5r45.sheet.spells"}}</div>
     {{> "systems/l5r45/templates/partials/pc-spell-slots.hbs"}}
-    <a class="item-create" data-type="spell" title="{{localize "l5r45.sheet.addTechSpell"}}">
+    <a class="item-create" data-type="spell" title="{{localize "l5r45.sheet.addSpell"}}">
       <i class="fas fa-plus"></i>
     </a>
   </h2>
