--- a/templates/partials/pc-techniques.hbs
+++ b/templates/partials/pc-techniques.hbs
@@ -1,7 +1,7 @@
-<section class="spells techniques panelBorder">
+<section class="techs techniques panelBorder">
   <h2>
       <div>{{localize "l5r45.sheet.techniques"}}</div>
-      <a class="item-create" data-type="technique" title="{{localize "l5r45.sheet.addTechSpell"}}">
+      <a class="item-create" data-type="technique" title="{{localize "l5r45.sheet.addTech"}}">
         <i class="fas fa-plus"></i>
       </a>
     </h2>
