--- a/l5r45.css
+++ b/l5r45.css
@@ -109,10 +109,10 @@
   font-family: "Rotis Serif";
 }
 .l5r45.pc .ranks {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  display: flex;
   align-items: center;
   column-gap: 1.5em;
+  flex-direction: column;
 }
 .l5r45.pc .ranks .rank-name {
   display: grid;
@@ -147,16 +147,16 @@
   margin: 0 auto;
 }
 .l5r45.pc .combat-stats .initiative-table {
-  display: flexbox;
+  display: flex;
   align-items: center;
   text-align: center;
-  width: fit-content;
+  width: 100%;
 }
 .l5r45.pc .combat-stats .defense-table {
-  display: flexbox;
+  display: flex;
   align-items: center;
   text-align: center;
-  width: fit-content;
+  width: 100%;
 }
 .l5r45.pc .combat-stats .defense-table img {
   height: 1rem;
@@ -186,6 +186,7 @@
   flex-direction: column;
   align-items: center;
   flex: 50%;
+  min-width: 58%;
 }
 .l5r45.pc .main-sheet .main-stats .panelBorder {
   margin-bottom: 32px;
@@ -817,41 +818,13 @@
   align-items: center;
 }
 .l5r45.pc .techniques-list .technique-stats {
-  display: grid;
-  grid-template-columns: 1fr 2fr;
-  column-gap: 0.2em;
-  align-items: center;
+  display: flex;
 }
 .l5r45.pc .masteries-list .mastery-stats {
   display: grid;
   grid-template-columns: 1fr;
   column-gap: 0.2em;
   align-items: center;
-}
-.l5r45.pc .spells-list .spell-stats {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-areas: "ring mastery duration" "range aoe aoe" "raises raises raises";
-  column-gap: 0.2em;
-  align-items: center;
-}
-.l5r45.pc .spells-list .spell-stats .spell-ring {
-  grid-area: ring;
-}
-.l5r45.pc .spells-list .spell-stats .spell-mastery {
-  grid-area: mastery;
-}
-.l5r45.pc .spells-list .spell-stats .spell-range {
-  grid-area: range;
-}
-.l5r45.pc .spells-list .spell-stats .spell-aoe {
-  grid-area: aoe;
-}
-.l5r45.pc .spells-list .spell-stats .spell-duration {
-  grid-area: duration;
-}
-.l5r45.pc .spells-list .spell-stats .spell-raises {
-  grid-area: raises;
 }
 .l5r45.pc .kata-list .kata-stats {
   display: grid;
@@ -864,6 +837,250 @@
   grid-template-columns: 1fr 1fr 1fr;
   column-gap: 0.2em;
   align-items: center;
+}
+.l5r45.pc {
+  display: flex;
+  flex-direction: column;
+}
+.l5r45.pc .misc {
+  height: 100%;
+}
+.l5r45.pc .editor .editor-content {
+  min-height: 100px;
+}
+.l5r45.pc .pc-info {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  padding: 1em;
+}
+.l5r45.pc .traits-rings {
+  display: grid;
+  grid-template-columns: 1fr 32px 32px 32px 32px 32px 32px 32px 32px 32px 32px 32px 32px 32px 32px 1fr;
+  grid-template-rows: min-content 1fr 1fr 1fr 1fr 1fr min-content min-content;
+  align-items: center;
+  justify-items: center;
+}
+.l5r45.pc .traits-rings .ring-name {
+  font-size: 2em;
+  font-weight: bold;
+  margin: 0;
+  align-self: start;
+}
+.l5r45.pc .traits-rings .ring-rank {
+  z-index: 10;
+  background-color: #FFFFFF;
+  width: 75%;
+  height: 75%;
+  border-radius: 50%;
+  border: #000000 solid 3px;
+  align-content: center;
+  display: grid;
+  justify-content: center;
+  font-size: 2em;
+}
+.l5r45.pc .traits-rings .trait,
+.l5r45.pc .traits-rings .void-points {
+  height: 32px;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 32px;
+  grid-template-areas: "roll rank";
+  column-gap: 0.5em;
+  align-self: end;
+  justify-items: right;
+  margin: 4px 0;
+}
+.l5r45.pc .traits-rings .trait .trait-roll,
+.l5r45.pc .traits-rings .void-points .trait-roll,
+.l5r45.pc .traits-rings .trait .void-points-name,
+.l5r45.pc .traits-rings .void-points .void-points-name {
+  grid-area: roll;
+}
+.l5r45.pc .traits-rings .trait .trait-rank,
+.l5r45.pc .traits-rings .void-points .trait-rank,
+.l5r45.pc .traits-rings .trait .void-points-amount,
+.l5r45.pc .traits-rings .void-points .void-points-amount {
+  grid-area: rank;
+  z-index: 10;
+  background-color: #FFFFFF;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  border: #000000 solid 3px;
+  text-align: center;
+  font-size: 1.5em;
+}
+.l5r45.pc .traits-rings .trait-reflexe,
+.l5r45.pc .traits-rings .trait-awarness,
+.l5r45.pc .traits-rings .trait-agility,
+.l5r45.pc .traits-rings .trait-intelligence {
+  grid-template-columns: 32px 1fr;
+  grid-template-areas: "rank roll";
+  justify-items: left;
+}
+.l5r45.pc .traits-rings .trait-willpower,
+.l5r45.pc .traits-rings .trait-perception,
+.l5r45.pc .traits-rings .trait-awarness,
+.l5r45.pc .traits-rings .trait-intelligence {
+  align-self: start;
+}
+.l5r45.pc .traits-rings .ring-name-earth {
+  grid-column: 5/9;
+  grid-row: 1/2;
+}
+.l5r45.pc .traits-rings .ring-rank-earth {
+  grid-column: 7/9;
+  grid-row: 3/4;
+  border-color: #3b1b00;
+}
+.l5r45.pc .traits-rings .earth-ring {
+  grid-column: 5/9;
+  grid-row: 2/4;
+}
+.l5r45.pc .traits-rings .earth-ring .earth-ring-img {
+  border: none;
+  content: url("assets/icons/earth.png");
+}
+.l5r45.pc .traits-rings .trait-stamina {
+  grid-column: 1/5;
+  grid-row: 2/3;
+}
+.l5r45.pc .traits-rings .trait-stamina .trait-rank {
+  border-color: #3b1b00;
+}
+.l5r45.pc .traits-rings .trait-willpower {
+  grid-column: 1/5;
+  grid-row: 3/4;
+}
+.l5r45.pc .traits-rings .trait-willpower .trait-rank {
+  border-color: #3b1b00;
+}
+.l5r45.pc .traits-rings .ring-name-air {
+  grid-column: 9/13;
+  grid-row: 1/2;
+}
+.l5r45.pc .traits-rings .ring-rank-air {
+  grid-column: 9/11;
+  grid-row: 3/4;
+  border-color: #002f3b;
+}
+.l5r45.pc .traits-rings .air-ring {
+  grid-column: 9/13;
+  grid-row: 2/4;
+}
+.l5r45.pc .traits-rings .air-ring .air-ring-img {
+  border: none;
+  content: url("assets/icons/air.png");
+}
+.l5r45.pc .traits-rings .trait-reflexe {
+  grid-column: 13/18;
+  grid-row: 2/3;
+}
+.l5r45.pc .traits-rings .trait-reflexe .trait-rank {
+  border-color: #002f3b;
+}
+.l5r45.pc .traits-rings .trait-awarness {
+  grid-column: 13/18;
+  grid-row: 3/4;
+}
+.l5r45.pc .traits-rings .trait-awarness .trait-rank {
+  border-color: #002f3b;
+}
+.l5r45.pc .traits-rings .ring-name-water {
+  grid-column: 3/6;
+  grid-row: 6/7;
+}
+.l5r45.pc .traits-rings .ring-rank-water {
+  grid-column: 6/8;
+  grid-row: 4/5;
+  border-color: #00183b;
+}
+.l5r45.pc .traits-rings .water-ring {
+  grid-column: 3/7;
+  grid-row: 4/6;
+}
+.l5r45.pc .traits-rings .water-ring .water-ring-img {
+  border: none;
+  content: url("assets/icons/water.png");
+}
+.l5r45.pc .traits-rings .trait-strength {
+  grid-column: 1/3;
+  grid-row: 4/5;
+}
+.l5r45.pc .traits-rings .trait-strength .trait-rank {
+  border-color: #00183b;
+}
+.l5r45.pc .traits-rings .trait-perception {
+  grid-column: 1/3;
+  grid-row: 5/6;
+}
+.l5r45.pc .traits-rings .trait-perception .trait-rank {
+  border-color: #00183b;
+}
+.l5r45.pc .traits-rings .ring-name-fire {
+  grid-column: 12/15;
+  grid-row: 6/7;
+}
+.l5r45.pc .traits-rings .ring-rank-fire {
+  grid-column: 10/12;
+  grid-row: 4/5;
+  border-color: #502000;
+}
+.l5r45.pc .traits-rings .fire-ring {
+  grid-column: 11/15;
+  grid-row: 4/6;
+}
+.l5r45.pc .traits-rings .fire-ring .fire-ring-img {
+  border: none;
+  content: url("assets/icons/fire.png");
+}
+.l5r45.pc .traits-rings .trait-agility {
+  grid-column: 15/18;
+  grid-row: 4/5;
+}
+.l5r45.pc .traits-rings .trait-agility .trait-rank {
+  border-color: #502000;
+}
+.l5r45.pc .traits-rings .trait-intelligence {
+  grid-column: 15/18;
+  grid-row: 5/6;
+}
+.l5r45.pc .traits-rings .trait-intelligence .trait-rank {
+  border-color: #502000;
+}
+.l5r45.pc .traits-rings .ring-name-void {
+  grid-column: 7/11;
+  grid-row: 7/8;
+}
+.l5r45.pc .traits-rings .ring-rank-void {
+  grid-column: 8/10;
+  grid-row: 5/6;
+  text-align: center;
+  border-color: #1b1b1b;
+}
+.l5r45.pc .traits-rings .void-ring {
+  grid-column: 7/11;
+  grid-row: 5/7;
+}
+.l5r45.pc .traits-rings .void-ring .void-ring-img {
+  border: none;
+  content: url("assets/icons/void.png");
+}
+.l5r45.pc .traits-rings .void-points {
+  grid-column: 1/18;
+  grid-row: 8/9;
+  width: max-content;
+}
+.l5r45.pc .traits-rings .void-points .trait-rank {
+  border-color: #1b1b1b;
+}
+.l5r45.pc h2 {
+  display: flex;
+  flex-direction: row;
+}
+.l5r45.pc h2 .item-create {
+  margin-left: auto;
 }
 .l5r45.pc .pc-armor-grid {
   display: grid;
@@ -908,6 +1125,31 @@
 }
 .l5r45.pc .armor-tn-reduction-value {
   grid-area: reductionv;
+}
+.l5r45.pc .glories {
+  display: flex;
+  flex-direction: column;
+  width: max-content;
+}
+.l5r45.pc .glories h3 {
+  display: grid;
+  grid-template-columns: 15px 4fr 1fr 2fr 2fr 2fr 20px;
+  justify-items: center;
+}
+.l5r45.pc .glories .glory-item {
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  border-bottom: solid 1px rgba(0, 0, 0, 0.26);
+}
+.l5r45.pc .glories .glory-item img {
+  height: 1rem;
+  width: 1rem;
+  border: none;
+}
+.l5r45.pc .glories .glory-item .glory-value {
+  width: 3ch;
+  text-align: center;
 }
 .l5r45.npc .editor .editor-content {
   min-height: 100px;
