--- a/less/pc-honor-and-combat.less
+++ b/less/pc-honor-and-combat.less
@@ -1,9 +1,9 @@
 .l5r45.pc {
   .ranks {
-    display:grid;
-    grid-template-columns: 1fr 1fr;
+    display: flex;
     align-items: center;
     column-gap: 1.5em;
+    flex-direction: column;
 
     .rank-name {
       display:grid;
@@ -46,17 +46,17 @@
 
   .combat-stats {
     .initiative-table {
-      display: flexbox;
+      display: flex;
       align-items: center;
       text-align: center;
-      width: fit-content;
+      width: 100%;
 
     }
     .defense-table {
-      display: flexbox;
+      display: flex;
       align-items: center;
       text-align: center;
-      width: fit-content;
+      width: 100%;
 
       img{
         height: 1rem;
