--- a/less/pc-sheet.less
+++ b/less/pc-sheet.less
@@ -16,6 +16,7 @@
       flex-direction: column;
       align-items: center;
       flex: 50%;
+      min-width: 58%;
 
       .panelBorder{
         margin-bottom: 32px;
