--- a/templates/partials/technique-card.hbs
+++ b/templates/partials/technique-card.hbs
@@ -11,7 +11,7 @@
       </h3>
     </div>
     <div class="technique-info technique-stats">
-      <div class="technique-effects">
+      <div class="technique-effects" style="column-span: 2;">
         {{{system.specialRules}}}
       </div>
     </div>
