Updated character sheet, changed insight and defense algorithm.

--- a/less/l5r45.less
+++ b/less/l5r45.less
@@ -20,6 +20,7 @@
 @import "./npc-stats.less";
 @import "./limited-pc-sheet.less";
 @import "./limited-npc-sheet.less";
+@import "./adventage-card.less";
 @import "./global.less";
 
 @import "./pc-sheet-style.less";
