--- a/templates/partials/commonItem-card.hbs
+++ b/templates/partials/commonItem-card.hbs
@@ -3,6 +3,9 @@
     <div class="commonItem-info commonItem-name">
       <h3><a class="item-edit">{{name}}</a></h3>
     </div>
+    <div>
+      {{{system.description}}}
+    </div>
     {{#if inSheet}}
       <div>
         <a class="item-edit"  title="{{localize "l5r45.sheet.edit"}}"><i class="fas fa-edit fa-fw"></i></a>
