--- a/l5r45.css
+++ b/l5r45.css
@@ -642,7 +642,7 @@
 }
 .l5r45.pc .equipment .equipment-list .item {
   display: grid;
-  grid-template-columns: 1fr max-content;
+  grid-template-columns: 33% max-content;
   column-gap: 1em;
   border-bottom: solid 1px rgba(0, 0, 0, 0.26);
 }
@@ -653,12 +653,18 @@
   display: flex;
   flex-direction: column;
 }
+.l5r45.pc .equipment .commonItems-list .item {
+  grid-template-columns: 33% 2fr max-content;
+}
 .l5r45.pc .equipment .commonItems-list .item .commonItem-name {
   display: grid;
-  grid-template-columns: max-content 1fr;
-  column-gap: 0.2em;
+  grid-template-columns: 95% max-content;
+  column-gap: 1em;
   align-items: center;
   margin-left: 20px;
+}
+.l5r45.pc .equipment .commonItems-list .item .commonItem-name div p {
+  overflow-wrap: anywhere;
 }
 .l5r45.pc .equipment .weapons-list {
   display: flex;
@@ -670,7 +676,7 @@
   border: none;
 }
 .l5r45.pc .equipment .weapons-list .item {
-  grid-template-columns: 1fr 2fr max-content;
+  grid-template-columns: 33% 2rem 2fr min-content;
 }
 .l5r45.pc .equipment .weapons-list .item .weapon-name {
   display: grid;
@@ -679,9 +685,7 @@
   align-items: center;
 }
 .l5r45.pc .equipment .weapons-list .item .weapon-stats {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  column-gap: 0.2em;
+  display: flex;
   align-items: center;
 }
 .l5r45.pc .equipment .armors-list {
@@ -689,7 +693,8 @@
   flex-direction: column;
 }
 .l5r45.pc .equipment .armors-list .item {
-  grid-template-columns: 1fr 2fr max-content;
+  grid-template-columns: 33% 2fr max-content;
+  grid-template-rows: 1fr 1fr;
 }
 .l5r45.pc .equipment .armors-list .item .armor-name {
   display: grid;
@@ -708,6 +713,12 @@
   height: 1rem;
   width: 1rem;
   border: none;
+}
+.l5r45.pc .equipment .armors-list .item .armor-effects {
+  grid-column-start: 2;
+}
+.l5r45.pc .equipment .armors-list .item .armor-effects p {
+  overflow-wrap: anywhere;
 }
 .l5r45.pc .skills {
   display: flex;
@@ -790,7 +801,7 @@
 }
 .l5r45.pc .special-list .item {
   display: grid;
-  grid-template-columns: 1fr 2fr max-content;
+  grid-template-columns: 1fr 2fr min-content;
   column-gap: 1em;
   border-bottom: solid 1px rgba(0, 0, 0, 0.26);
 }
@@ -1311,6 +1322,20 @@
 .l5r45.npc .limited .limited-info {
   display: flex;
   flex-flow: column;
+}
+.l5r45.pc .advantage-list .advantage-stats {
+  align-items: start;
+  column-gap: 1rem;
+}
+.l5r45.pc .advantage-list .advantage .advantage-card {
+  grid-template-columns: 10vw min-content auto min-content;
+}
+.l5r45.pc .disadvantage-list .disadvantage-stats {
+  align-items: start;
+  column-gap: 1rem;
+}
+.l5r45.pc .disadvantage-list .disadvantage .disadvantage-card {
+  grid-template-columns: 10vw min-content auto min-content;
 }
 body > * {
   scrollbar-width: thin;
