--- a/less/pc-equipment.less
+++ b/less/pc-equipment.less
@@ -31,7 +31,7 @@
 
       .item {
         display: grid;
-        grid-template-columns: 1fr max-content;
+        grid-template-columns: 33% max-content;
         column-gap: 1em;
         border-bottom: solid 1px rgba(0, 0, 0, 0.26);
 
@@ -46,12 +46,18 @@
       flex-direction: column;
 
       .item {
+        grid-template-columns: 33% 2fr max-content;
         .commonItem-name {
           display: grid;
-          grid-template-columns: max-content 1fr;
-          column-gap: .2em;
+          grid-template-columns: 95% max-content;
+          column-gap: 1em;
           align-items: center;
           margin-left: 20px;
+          div {
+            p {
+              overflow-wrap: anywhere;
+            }
+          }
         }
       }
     }
@@ -67,20 +73,17 @@
       }
 
       .item {
-        grid-template-columns: 1fr 2fr max-content;
+        grid-template-columns: 33% 2rem 2fr min-content;
 
         .weapon-name {
           display: grid;
           grid-template-columns: max-content max-content 1fr;
-          ;
           column-gap: .2em;
           align-items: center;
         }
 
         .weapon-stats {
-          display: grid;
-          grid-template-columns: 1fr 1fr 1fr;
-          column-gap: .2em;
+          display: flex;
           align-items: center;
         }
       }
@@ -91,7 +94,8 @@
       flex-direction: column;
 
       .item {
-        grid-template-columns: 1fr 2fr max-content;
+        grid-template-columns: 33% 2fr max-content;
+        grid-template-rows: 1fr 1fr;
 
         .armor-name {
           display: grid;
@@ -111,6 +115,13 @@
             height: 1rem;
             width: 1rem;
             border: none;
+          }
+        }
+
+        .armor-effects {
+          grid-column-start: 2;
+          p {
+            overflow-wrap: anywhere;
           }
         }
       }
