--- a/less/pc-techniques.less
+++ b/less/pc-techniques.less
@@ -6,7 +6,7 @@
 
     .item {
       display : grid;
-      grid-template-columns: 1fr 2fr max-content;
+      grid-template-columns: 1fr 2fr min-content;
       column-gap: 1em;
       border-bottom: solid 1px rgba(0, 0, 0, 0.26);
     }
