--- a/templates/sheets/limited-pc-sheet.hbs
+++ b/templates/sheets/limited-pc-sheet.hbs
@@ -7,5 +7,6 @@
       </div>
     </div>
     <img class="actor-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" />
+    {{{system.notes}}}
   </div>
 </form>
