--- a/templates/partials/armor-card.hbs
+++ b/templates/partials/armor-card.hbs
@@ -28,7 +28,7 @@
     </div>
     {{/if}}
     <div class="armor-effects">
-      {{{system.description}}}
+      {{{system.enrichedDescription}}}
     </div>
   </div>
 </div>
