--- a/templates/partials/commonItem-card.hbs
+++ b/templates/partials/commonItem-card.hbs
@@ -4,7 +4,7 @@
       <h3><a class="item-edit">{{name}}</a></h3>
     </div>
     <div>
-      {{{system.description}}}
+      {{{system.enrichedDescription}}}
     </div>
     {{#if inSheet}}
       <div>
