--- a/templates/partials/glory-card.hbs
+++ b/templates/partials/glory-card.hbs
@@ -10,7 +10,7 @@
     </div>
     <div class="glory-info glory-stats">
       <div class="glory-type">
-          <p>{{{system.description}}}</p>
+          <p>{{{system.enrichedDescription}}}</p>
       </div>
     {{#if inSheet}}
       <div>
