--- a/templates/partials/kata-card.hbs
+++ b/templates/partials/kata-card.hbs
@@ -20,7 +20,7 @@
     </div>
     {{#unless inSheet}}
       <div class="kata-effects">
-        {{{system.specialRules}}}
+        {{{system.enrichedSpecialRules}}}
       </div>
       {{/unless}}
     {{#if inSheet}}
