--- a/templates/partials/kiho-card.hbs
+++ b/templates/partials/kiho-card.hbs
@@ -23,7 +23,7 @@
     </div>
     {{#unless inSheet}}
       <div class="kiho-effects">
-        {{{system.specialRules}}}
+        {{{system.enrichedSpecialRules}}}
       </div>
       {{/unless}}
     {{#if inSheet}}
