--- a/templates/partials/skill-card.hbs
+++ b/templates/partials/skill-card.hbs
@@ -17,7 +17,7 @@
       </div>
       {{#unless inSheet}}
       <div class="spell-effects">
-        {{{system.specialRules}}}
+        {{{system.enrichedSpecialRules}}}
       </div>
       {{/unless}}
       {{#if (gte system.rank 3) }}
