--- a/templates/partials/spell-card.hbs
+++ b/templates/partials/spell-card.hbs
@@ -31,7 +31,7 @@
       </div>
       {{#unless inSheet}}
       <div class="spell-effects">
-        {{{system.specialRules}}}
+        {{{system.enrichedSpecialRules}}}
       </div>
       {{/unless}}
     </div>
