--- a/templates/partials/weapon-card.hbs
+++ b/templates/partials/weapon-card.hbs
@@ -29,7 +29,7 @@
       {{/if}}
     </div>
     <div class="weapon-effects">
-      {{{system.description}}}
+      {{{system.enrichedDescription}}}
     </div>
     {{#if inSheet}}
       <div>
