--- a/templates/sheets/glory-sheet.hbs
+++ b/templates/sheets/glory-sheet.hbs
@@ -12,6 +12,6 @@
       </tr>
     </table>
     <h2>{{localize "l5r45.sheet.description"}}</h2>
-    {{editor item.system.description target="system.description" button=true  editable=editable}}
+    {{editor item.system.enrichedDescription target="system.description" button=true  editable=editable engine="prosemirror" collaborate=false}}
   </div>
 </form>
