--- a/templates/partials/advantage-card.hbs
+++ b/templates/partials/advantage-card.hbs
@@ -19,7 +19,7 @@
       </div>
     </div>
       <div class="advantage-effects">
-        {{{system.specialRules}}}
+        {{{system.enrichedSpecialRules}}}
       </div>
     {{#if inSheet}}
       <div>
