--- a/templates/partials/technique-card.hbs
+++ b/templates/partials/technique-card.hbs
@@ -12,7 +12,7 @@
     </div>
     <div class="technique-info technique-stats">
       <div class="technique-effects" style="column-span: 2;">
-        {{{system.specialRules}}}
+        {{{system.enrichedSpecialRules}}}
       </div>
     </div>
     {{#if inSheet}}
