--- a/templates/sheets/commonItem-sheet.hbs
+++ b/templates/sheets/commonItem-sheet.hbs
@@ -4,6 +4,6 @@
   <h1><input name="name" type="text" value="{{item.name}}" placeholder="Name"/></h1>
   </header>
   <div class="sheet-content">
-    {{editor item.system.description target="system.description" button=true  editable=editable}}
+    {{editor item.system.enrichedDescription target="system.description" button=true  editable=editable engine="prosemirror" collaborate=false}}
   </div>
 </form>
