--- a/templates/sheets/weapon-sheet.hbs
+++ b/templates/sheets/weapon-sheet.hbs
@@ -7,12 +7,23 @@
   <table>
     <tr>
     <th>{{localize "l5r45.weapon.size"}}</th>
+    <th>{{localize "l5r45.weapon.trait"}}</th>
     <th>{{localize "l5r45.weapon.damageRoll"}}</th>
     <th>{{localize "l5r45.weapon.damageKeep"}}</th>
     <th>{{localize "l5r45.weapon.explodesOn"}}</th>
     </tr>
     <td>
     <input name="system.size" type="text" value="{{item.system.size}}" />
+    </td>
+    <td>
+    <select name="system.trait">
+      <option value="none" selected>{{localize "l5r45.traits.none"}}</option>
+      {{#select item.system.trait}}
+      {{#each config.traits as |name trait|}}
+      <option value="{{trait}}">{{localize name}}</option>
+      {{/each}}
+      {{/select}}
+    </select>
     </td>
     <td>
     <input name="system.damageRoll" type="number" value="{{item.system.damageRoll}}" data-type="Number" />
@@ -24,6 +35,6 @@
     <input name="system.explodesOn" type="number" value="{{item.system.explodesOn}}" data-type="Number" />
     </td>
   </table>
-    {{editor item.system.description target="system.description" button=true  editable=editable}}
+    {{editor item.system.enrichedDescription target="system.description" button=true  editable=editable engine="prosemirror" collaborate=false}}
   </div>
 </form>
